# AP_Project

./: BasicEnemy.cpp  BasicEnemy.h  CMakeLists.txt  Controller.cpp  Controller.h  Doxyfile  Entity.cpp  Entity.h  Game.cpp  Game.h  LevelParser.cpp  LevelParser.h  PlayerShip.cpp  PlayerShip.h  README.md  Rapport.docx  Ship.cpp  Ship.h  Stopwatch.cpp  buildScript.sh  main.cpp  testLevel.json
GameLogic/src/: BasicEnemy.cpp  BasicEnemyBullet.cpp  Bullet.cpp  DoubleShotEnemy.cpp  EnergyBullet.cpp  EnergyCannon.cpp  Entity.cpp  Game.cpp  Level.cpp  LevelParser.cpp  LogicUtils.cpp  Player.cpp  PlayerShip.cpp  Ship.cpp  Stopwatch.cpp  Transformation.cpp
Levels/: Level1.json  Level2.json  testLevel.json
SFML/: main.cpp
SFML/Include/: BasicEnemy.h  BasicEnemyBullet.h  DoubleShotEnemy.h  EnergyBullet.h  EnergyCannon.h  Game.h  Level.h  LevelParser.h  Player.cpp  Player.h  utils.h
SFML/src/: BasicEnemy.cpp  BasicEnemyBullet.cpp  DoubleShotEnemy.cpp  EnergyBullet.cpp  EnergyCannon.cpp  Game.cpp  Level.cpp  LevelParser.cpp  Player.cpp  utils.cpp
docs/: index.html
docs/html/: Bullet_8h_source.html  Controller_8h_source.html  Entity_8h_source.html  GameLogic_2Include_2GameLogic_2BasicEnemyBullet_8h_source.html  GameLogic_2Include_2GameLogic_2BasicEnemy_8h_source.html  GameLogic_2Include_2GameLogic_2DoubleShotEnemy_8h_source.html  GameLogic_2Include_2GameLogic_2EnergyBullet_8h_source.html  GameLogic_2Include_2GameLogic_2EnergyCannon_8h_source.html  GameLogic_2Include_2GameLogic_2Level_8h_source.html  GameLogic_2Include_2GameLogic_2Player_8h_source.html  Game_8h_source.html  LevelParser_8h_source.html  LogicUtils_8h_source.html  SFML_2Include_2BasicEnemyBullet_8h_source.html  SFML_2Include_2BasicEnemy_8h_source.html  SFML_2Include_2DoubleShotEnemy_8h_source.html  SFML_2Include_2EnergyBullet_8h_source.html  SFML_2Include_2EnergyCannon_8h_source.html  SFML_2Include_2Level_8h_source.html  SFML_2Include_2Player_8h_source.html  Ship_8h_source.html  Stopwatch_8h_source.html  Transformation_8h_source.html  annotated.html  classController-members.html  classController.html  classGameLogic_1_1BasicEnemy-members.html  classGameLogic_1_1BasicEnemy.html  classGameLogic_1_1BasicEnemyBullet-members.html  classGameLogic_1_1BasicEnemyBullet.html  classGameLogic_1_1BasicEnemyBullet__coll__graph.map  classGameLogic_1_1BasicEnemyBullet__coll__graph.md5  classGameLogic_1_1BasicEnemyBullet__inherit__graph.map  classGameLogic_1_1BasicEnemyBullet__inherit__graph.md5  classGameLogic_1_1BasicEnemy__coll__graph.map  classGameLogic_1_1BasicEnemy__coll__graph.md5  classGameLogic_1_1BasicEnemy__inherit__graph.map  classGameLogic_1_1BasicEnemy__inherit__graph.md5  classGameLogic_1_1Bullet-members.html  classGameLogic_1_1Bullet.html  (+129 more)
docs/latex/: annotated.tex  classController.tex  classGameLogic_1_1BasicEnemy.tex  classGameLogic_1_1BasicEnemyBullet.tex  classGameLogic_1_1BasicEnemyBullet__coll__graph.md5  classGameLogic_1_1BasicEnemyBullet__inherit__graph.md5  classGameLogic_1_1BasicEnemy__coll__graph.md5  classGameLogic_1_1BasicEnemy__inherit__graph.md5  classGameLogic_1_1Bullet.tex  (+61 more)
(+49 files in other folders)
